--- a/pages/lor.html
+++ b/pages/lor.html
@@ -8,10 +8,13 @@
   <link rel="stylesheet" type="text/css" href="../css/project.css">
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,600|Lato:300,400|Permanent+Marker"
     rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick.css"
+  />
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick-theme.css"
+  />
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="https://use.fontawesome.com/f1cdcabfb0.js"></script>
-
 </head>
 
 <body>
@@ -28,7 +31,7 @@
 
     <div id="button">
       <a id="resume-link" href="http://leftonread.me" target="_blank">
-        <p id="see-resume">See the wesbite</p>
+        <p id="see-resume">See the website</p>
       </a>
     </div>
   </div>
@@ -179,6 +182,7 @@
 
   </div>
 
+  <script type="text/javascript" src="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick.min.js"></script>
   <script type="text/javascript" src="../js/main.js"></script>
 </body>
 
