--- a/pages/unmasked.html
+++ b/pages/unmasked.html
@@ -23,7 +23,7 @@
     <a class="page-back" href="../index.html"> <i class="fa fa-arrow-left" aria-hidden="true"></i> &nbsp; Back to home </a>
 
     <h1 class="page-title">UNMASKED</h1>
-    <h2 class="page-role">UI/UX DESIGN</h2>
+    <h2 class="page-role">UI/UX DESIGNER</h2>
     <h3 class="page-tagline">How might we create a annonymous community to discuss mental health issues at Dartmouth?</h3>
 
   </div>
