fixed some grammar and added numbers

--- a/pages/lor.html
+++ b/pages/lor.html
@@ -166,10 +166,10 @@
 
     <div class="title-wrapper">
       <h1 class="section-title">Next Steps</h1>
-      <img class="section-number" src="../img/4.png" alt="4">
+      <img class="section-number" src="../img/5.png" alt="5">
     </div>
 
-    <p class="page-normal-text"> From the outstanding positive feedback from both our peers and faculty, we kenw that we wanted to
+    <p class="page-normal-text"> From the outstanding positive feedback from both our peers and faculty, we knew that we wanted to
       expand Left On Read to our friends and family, and possibly even the world. </p>
 
     <p class="page-normal-text"> Even from the start, we knew that Left On Read wasn't going to change the world. We were first interested
