--- a/pages/lor.html
+++ b/pages/lor.html
@@ -181,7 +181,7 @@
       launch to the rest of the world. Check out what we're up to at leftonread.me </p>
 
   </div>
-
+  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick.min.js"></script>
   <script type="text/javascript" src="../js/main.js"></script>
 </body>
