--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
       </div>
     </div>
   </div>
-
+  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/micromodal/dist/micromodal.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
   <script type="text/javascript" src="./js/main.js"></script>
