--- a/pages/lor.html
+++ b/pages/lor.html
@@ -8,12 +8,6 @@
   <link rel="stylesheet" type="text/css" href="../css/project.css">
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,600|Lato:300,400|Permanent+Marker"
     rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick.css"
-  />
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick-theme.css"
-  />
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
   <script src="https://use.fontawesome.com/f1cdcabfb0.js"></script>
 </head>
 
@@ -24,15 +18,16 @@
   <div class="page-header">
 
     <a class="page-back" href="../index.html"> <i class="fa fa-arrow-left" aria-hidden="true"></i> &nbsp; Back to home </a>
+    <div class="page-header-content">
+      <h1 class="page-title">LEFT ON READ</h1>
+      <h2 class="page-role"> Lead Designer | Front-End Developer</h2>
+      <h3 class="page-tagline"> Analyze your texts. Learn who your friends area. See your texting habits. </h3>
 
-    <h1 class="page-title">LEFT ON READ</h1>
-    <h2 class="page-role"> Lead Designer | Front-End Developer</h2>
-    <h3 class="page-tagline"> Analyze your texts. Learn who your friends area. See your texting habits. </h3>
-
-    <div id="button">
-      <a id="resume-link" href="http://leftonread.me" target="_blank">
-        <p id="see-resume">See the website</p>
-      </a>
+      <div id="button">
+        <a id="resume-link" href="http://leftonread.me" target="_blank">
+          <p id="see-resume">See the website</p>
+        </a>
+      </div>
     </div>
   </div>
 
@@ -160,13 +155,13 @@
     </div>
     <div class="title-wrapper">
       <h1 class="section-title">Product</h1>
-      <img class="section-number" src="../img/4.png" alt="4">
+      <img class="section-number" src="../img/5.png" alt="5">
     </div>
 
 
     <div class="title-wrapper">
       <h1 class="section-title">Next Steps</h1>
-      <img class="section-number" src="../img/5.png" alt="5">
+      <img class="section-number" src="../img/6.png" alt="6">
     </div>
 
     <p class="page-normal-text"> From the outstanding positive feedback from both our peers and faculty, we knew that we wanted to
@@ -182,8 +177,9 @@
 
   </div>
   <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick.min.js"></script>
-  <script type="text/javascript" src="../js/main.js"></script>
+  <script src="https://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
+  <script src="./js/boostrap.js"></script>
+  <script type="text/javascript" src="../js/project.js"></script>
 </body>
 
 </html>
