--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Justin Luo</title>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
   <link rel="stylesheet" type="text/css" href="./css/micromodal.css">
-
+  <link rel="stylesheet" type="text/css" href="./css/boostrap.css">
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,600|Lato:300,400|Permanent+Marker"
     rel="stylesheet">
   <script src="https://use.fontawesome.com/f1cdcabfb0.js"></script>
@@ -197,7 +197,7 @@
             <ul class="keys-list">
               <li class="key" id="illustrator">ILLUSTRATOR</li>
               <li class="key" id="research">USER RESEARCH</li>
-              <li class="key" id="prototyping">PROTOTYPE</li>
+              <li class="key" id="prototyping">PROTOTYPING</li>
             </ul>
           </div>
         </div>
@@ -243,7 +243,7 @@
             <h2 class="small-title">Crunch</h2>
             <h2 class="small-role">Product Designer</h2>
             <ul class="keys-list" id="small-keys-list">
-              <li class="small-key" id="product">Product Design</li>
+              <li class="small-key" id="prototyping">Prototyping</li>
               <li class="small-key" id="illustrator">Illustrator</li>
               <li class="small-key" id="after-effects">After Effects</li>
             </ul>
@@ -322,7 +322,8 @@
             <h2 class="small-role">Teaching Assistant</h2>
             <ul class="keys-list" id="small-keys-list">
               <li class="small-key" id="design-thinking">Design Thinking</li>
-              <li class="small-key" id="product">Product Design</li>
+              <li class="small-key" id="prototyping">Prototyping</li>
+              <li class="small-key" id="research">User Research</li>
             </ul>
           </div>
         </div>
@@ -540,6 +541,7 @@
   <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/micromodal/dist/micromodal.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
+  <script src="./js/boostrap.js"></script>
   <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
