--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Justin Luo</title>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
   <link rel="stylesheet" type="text/css" href="./css/micromodal.css">
-  <link rel="stylesheet" type="text/css" href="./css/boostrap.css">
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,600|Lato:300,400|Permanent+Marker"
     rel="stylesheet">
   <script src="https://use.fontawesome.com/f1cdcabfb0.js"></script>
@@ -540,8 +539,9 @@
   </div>
   <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/micromodal/dist/micromodal.min.js"></script>
-  <script src="https://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
-  <script src="./js/boostrap.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="./js/bootstrap.js"></script>
   <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
