--- a/pages/unmasked.html
+++ b/pages/unmasked.html
@@ -6,12 +6,11 @@
   <title>Justin Luo</title>
   <link rel="stylesheet" type="text/css" href="../css/style.css">
   <link rel="stylesheet" type="text/css" href="../css/project.css">
+  <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,600|Lato:300,400|Permanent+Marker"
     rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
   <script src="https://use.fontawesome.com/f1cdcabfb0.js"></script>
-
 </head>
 
 <body>
@@ -21,11 +20,11 @@
   <div class="page-header">
 
     <a class="page-back" href="../index.html"> <i class="fa fa-arrow-left" aria-hidden="true"></i> &nbsp; Back to home </a>
-
-    <h1 class="page-title">UNMASKED</h1>
-    <h2 class="page-role">UI/UX DESIGNER</h2>
-    <h3 class="page-tagline">How might we create a annonymous community to discuss mental health issues at Dartmouth?</h3>
-
+    <div class="page-header-content">
+      <h1 class="page-title">UNMASKED</h1>
+      <h2 class="page-role">UI/UX DESIGNER</h2>
+      <h3 class="page-tagline">How might we create a annonymous community to discuss mental health issues at Dartmouth?</h3>
+    </div>
   </div>
 
   <div class="page-body">
@@ -183,7 +182,11 @@
 
 
   </div>
-  <script type="text/javascript" src="../js/main.js"></script>
+  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js "></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin=" anonymous "></script>
+  <script type="text/javascript " src="../js/bootstrap.js "></script>
+  <script type="text/javascript " src="../js/project.js "></script>
 </body>
 
 </html>
