--- a/pages/lor.html
+++ b/pages/lor.html
@@ -6,6 +6,8 @@
   <title>Justin Luo</title>
   <link rel="stylesheet" type="text/css" href="../css/style.css">
   <link rel="stylesheet" type="text/css" href="../css/project.css">
+  <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,600|Lato:300,400|Permanent+Marker"
     rel="stylesheet">
   <script src="https://use.fontawesome.com/f1cdcabfb0.js"></script>
@@ -28,7 +30,48 @@
           <p id="see-resume">See the website</p>
         </a>
       </div>
+
+
     </div>
+  </div>
+
+  <div class="carousel-wrapper">
+
+    <div id="main-carousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
+        <li data-target="#main-carousel" data-slide-to="1"></li>
+        <li data-target="#main-carousel" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img class="carousel-img" src="../img/lor/main-screen.PNG" alt="main">
+        </div>
+
+        <div class="item">
+          <img class="carousel-img" src="../img/lor/get-analytics.PNG" alt="analytics">
+        </div>
+
+        <div class="item">
+          <img class="carousel-img" src="../img/lor/graphs.PNG" alt="graphs">
+        </div>
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#main-carousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#main-carousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+  </div>
   </div>
 
   <div class="page-body">
@@ -150,7 +193,7 @@
 
     <h3 class="page-normal-text"> My favorite bit of feedback...</h3>
     <div class="page-quote-background">
-      <h1 class="page-large-quote"> "Didn't realize I would be so interested in my data. I was a skeptic at first but this has lots of potential."</h1>
+      <h1 class="page-large-quote"> "I was definitely a skeptic at first, but this data is so interesting!"</h1>
       <h3 class="page-quote-author"> Dartmouth Student '19 </h3>
     </div>
     <div class="title-wrapper">
@@ -158,28 +201,33 @@
       <img class="section-number" src="../img/5.png" alt="5">
     </div>
 
-
-    <div class="title-wrapper">
-      <h1 class="section-title">Next Steps</h1>
-      <img class="section-number" src="../img/6.png" alt="6">
+    <div class="large-gif-container">
+      <img class="large-gif" src=" ../img/lor/main-page.gif " alt="main-page-animation" />
+      <img class="large-gif" src="../img/lor/graphs.gif" alt="graphs animations" />
     </div>
 
-    <p class="page-normal-text"> From the outstanding positive feedback from both our peers and faculty, we knew that we wanted to
+    <div class="title-wrapper ">
+      <h1 class="section-title ">Next Steps</h1>
+      <img class="section-number " src="../img/6.png " alt="6 ">
+    </div>
+
+    <p class="page-normal-text "> From the outstanding positive feedback from both our peers and faculty, we knew that we wanted to
       expand Left On Read to our friends and family, and possibly even the world. </p>
 
-    <p class="page-normal-text"> Even from the start, we knew that Left On Read wasn't going to change the world. We were first interested
+    <p class="page-normal-text "> Even from the start, we knew that Left On Read wasn't going to change the world. We were first interested
       in the project because of the proposed challenge of parsing texts and displaying analytics. But
       we tapped into a service that catches almost everyone's curiosity, and we want to share the feeling
       of exploration when we first got our data. It was clear that people loved to see data about themselves.</p>
 
-    <p class="page-normal-text"> Since the end of spring 2018, we have been working on a design overhaul and preparing for a mass
+    <p class="page-normal-text "> Since the end of spring 2018, we have been working on a design overhaul and preparing for a mass
       launch to the rest of the world. Check out what we're up to at leftonread.me </p>
 
   </div>
-  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-  <script src="https://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
-  <script src="./js/boostrap.js"></script>
-  <script type="text/javascript" src="../js/project.js"></script>
+  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js "></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin=" anonymous "></script>
+  <script type="text/javascript " src="../js/bootstrap.js "></script>
+  <script type="text/javascript " src="../js/project.js "></script>
 </body>
 
 </html>
