added photos to lor

--- a/pages/lor.html
+++ b/pages/lor.html
@@ -47,15 +47,15 @@
 
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
-        <div class="item active">
+        <div class="main-item item active">
           <img class="carousel-img" src="../img/lor/main-screen.PNG" alt="main">
         </div>
 
-        <div class="item">
+        <div class="main-item item">
           <img class="carousel-img" src="../img/lor/get-analytics.PNG" alt="analytics">
         </div>
 
-        <div class="item">
+        <div class="main-item item">
           <img class="carousel-img" src="../img/lor/graphs.PNG" alt="graphs">
         </div>
       </div>
@@ -162,6 +162,49 @@
       This crucial part of the user flow was something we tested and reiterated multiple times during
       the prototype phase. </p>
 
+
+    <h1 class="page-small-title"> Initial Hi-Fis </h1>
+
+
+    <div class="carousel-wrapper">
+
+      <div id="hifi-carousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#hifi-carousel" data-slide-to="0" class="active"></li>
+          <li data-target="#hifi-carousel" data-slide-to="1"></li>
+          <li data-target="#hifi-carousel" data-slide-to="2"></li>
+
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="hifi-item item active">
+            <img class="carousel-img" src="../img/lor/landing-hifi.png" alt="main">
+          </div>
+
+          <div class="hifi-item item">
+            <img class="carousel-img" src="../img/lor/landing-bar-hifi.png" alt="analytics">
+          </div>
+
+          <div class="hifi-item item">
+            <img class="carousel-img" src="../img/lor/upload-first-hifi.png" alt="graphs">
+          </div>
+
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#hifi-carousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+        <a class="right carousel-control" href="#hifi-carousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+      </div>
+
+    </div>
 
     <div class="title-wrapper">
       <h1 class="section-title">Prototype</h1>
