--- a/pages/unmasked.html
+++ b/pages/unmasked.html
@@ -86,7 +86,8 @@
         creates more pressure and stress.</li>
       <li class="page-list-item">Some of our interviewees mentioned that posting in a Reddit thread or a comment section can be
         intimidating. </li>
-      <li class="page-list-item">Some believe that social media interactions are superficial and often a best version of ourselves.
+      <li class="page-list-item">Some believe that social media interactions are superficial and often a 'fake' best version of
+        ourselves.
       </li>
     </ul>
 
