added photos to unmasked

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <div class="project-description">
             <p class="tagline">"Maximize classroom learning through student feedback"</p>
             <p> Student and Teachers in Collaboration (STIC) is a proposed solution to maximize student learning
-              through an immediate feedback channel.</p>
+              through an immediate feedback channel at Dartmouth.</p>
             <!-- <a class="project-link" href="./pages/stic.html">
               <p>See the process</p>
             </a> -->
@@ -363,7 +363,7 @@
 
   <!-- Other Project Modals -->
 
-  <div class="modal micromodal-slide" id="react-blog-modal" aria-hidden="true">
+  <!-- <div class="modal micromodal-slide" id="react-blog-modal" aria-hidden="true">
     <div class="modal__overlay" tabindex="-1" data-micromodal-close>
       <div class="modal__container" role="dialog" aria-modal="true">
         <header class="modal__header">
@@ -536,7 +536,7 @@
           </footer>
       </div>
     </div>
-  </div>
+  </div> -->
   <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/micromodal/dist/micromodal.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
