--- a/pages/unmasked.html
+++ b/pages/unmasked.html
@@ -27,6 +27,47 @@
     </div>
   </div>
 
+
+
+  <div class="carousel-wrapper">
+
+    <div id="unmasked-lowfi-carousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#unmasked-lowfi-carousel" data-slide-to="0" class="active"></li>
+        <li data-target="#unmasked-lowfi-carousel" data-slide-to="1"></li>
+        <li data-target="#unmasked-lowfi-carousel" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="lowfi-item item active">
+          <img class="carousel-img" src="../img/unmasked/login-hifi.png" alt="john">
+        </div>
+
+        <div class="lowfi-item item">
+          <img class="carousel-img" src="../img/unmasked/homescreen-hifi.png" alt="analytics">
+        </div>
+
+        <div class="lowfi-item item">
+          <img class="carousel-img" src="../img/unmasked/chat-hifi.png" alt="graphs">
+        </div>
+
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#unmasked-lowfi-carousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+        <a class="right carousel-control" href="#unmasked-lowfi-carousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+      </div>
+    </div>
+  </div>
+
+
   <div class="page-body">
     <!-- Problem -->
     <div class="title-wrapper">
@@ -106,7 +147,43 @@
 
     <h2 class="page-small-title"> User Personas</h2>
 
+    <div class="carousel-wrapper">
 
+      <div id="unmasked-personas-carousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#unmasked-personas-carousel" data-slide-to="0" class="active"></li>
+          <li data-target="#unmasked-personas-carousel" data-slide-to="1"></li>
+          <li data-target="#unmasked-personas-carousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="persona-item item active">
+            <img class="carousel-img" src="../img/unmasked/john.png" alt="john">
+          </div>
+
+          <div class="persona-item item">
+            <img class="carousel-img" src="../img/unmasked/sarah.png" alt="analytics">
+          </div>
+
+          <div class="persona-item item">
+            <img class="carousel-img" src="../img/unmasked/tracy.png" alt="graphs">
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#unmasked-personas-carousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#unmasked-personas-carousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
+    </div>
 
     <div class="title-wrapper">
       <h1 class="section-title">Ideate</h1>
@@ -144,6 +221,60 @@
 
     <p class="page-normal-text"> By building out low-fis, we were able to quickly discuss feature ideas and get user feedback.</p>
 
+
+    <div class="carousel-wrapper">
+
+      <div id="unmasked-main-carousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#unmasked-main-carousel" data-slide-to="0" class="active"></li>
+          <li data-target="#unmasked-main-carousel" data-slide-to="1"></li>
+          <li data-target="#unmasked-main-carousel" data-slide-to="2"></li>
+          <li data-target="#unmasked-main-carousel" data-slide-to="3"></li>
+          <li data-target="#unmasked-main-carousel" data-slide-to="4"></li>
+          <li data-target="#unmasked-main-carousel" data-slide-to="5"></li>
+
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="lowfi-item item active">
+            <img class="carousel-img" src="../img/unmasked/homescreen1-lowfi.png" alt="john">
+          </div>
+
+          <div class="lowfi-item item">
+            <img class="carousel-img" src="../img/unmasked/homescreen2-lowfi.png" alt="analytics">
+          </div>
+
+          <div class="lowfi-item item">
+            <img class="carousel-img" src="../img/unmasked/comment-lowfi.png" alt="graphs">
+          </div>
+
+          <div class="lowfi-item item">
+            <img class="carousel-img" src="../img/unmasked/highlights-lowfi.png" alt="graphs">
+          </div>
+
+          <div class="lowfi-item item">
+            <img class="carousel-img" src="../img/unmasked/chat-lowfi.png" alt="graphs">
+          </div>
+
+          <div class="lowfi-item item">
+            <img class="carousel-img" src="../img/unmasked/user-activity-lowfi.png" alt="graphs">
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#unmasked-main-carousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#unmasked-main-carousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
+    </div>
     <p class="page-normal-text"> For example, we quickly found that users felt that three different types of reactions to a post would
       be excessive and one 'like' button would suffice. Additionally, we were able to get positive feedback
       on our idea of allowing users to like each other's posts, but not sharing the number of likes to
@@ -154,6 +285,60 @@
     <div class="title-wrapper">
       <h1 class="section-title">Product</h1>
       <img class="section-number" src="../img/5.png" alt="5">
+    </div>
+
+    <div class="carousel-wrapper">
+
+      <div id="unmasked-final-carousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#unmasked-final-carousel" data-slide-to="0" class="active"></li>
+          <li data-target="#unmasked-final-carousel" data-slide-to="1"></li>
+          <li data-target="#unmasked-final-carousel" data-slide-to="2"></li>
+          <li data-target="#unmasked-final-carousel" data-slide-to="3"></li>
+          <li data-target="#unmasked-final-carousel" data-slide-to="4"></li>
+          <li data-target="#unmasked-final-carousel" data-slide-to="5"></li>
+
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="iphone-item item active">
+            <img class="carousel-img" src="../img/unmasked/login-iphone.png" alt="graphs">
+          </div>
+
+          <div class="iphone-item item">
+            <img class="carousel-img" src="../img/unmasked/homescreen-iphone.png" alt="graphs">
+          </div>
+
+          <div class="iphone-item item">
+            <img class="carousel-img" src="../img/unmasked/identicon-iphone.png" alt="graphs">
+          </div>
+
+          <div class="iphone-item item">
+            <img class="carousel-img" src="../img/unmasked/connections-iphone.png" alt="graphs">
+          </div>
+
+          <div class="iphone-item item">
+            <img class="carousel-img" src="../img/unmasked/messages-iphone.png" alt="graphs">
+          </div>
+
+          <div class="iphone-item item">
+            <img class="carousel-img" src="../img/unmasked/chat-iphone.png" alt="graphs">
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#unmasked-final-carousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#unmasked-final-carousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
     </div>
 
 
