style changes, added more photos to projects

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <p> Left On Read allows users to analyze their Messages conversations on macOS devices. </p>
             <!-- <p> Left On Read is a website that allows users to view analytics about their Messages conversations on macOS devices. Left On Read started as a final group project for my Full Stack Web Development class.</p> -->
             <a class="project-link" href="./pages/lor.html">
-              <p>See the process
+              <p>Learn more
               </p>
             </a>
           </div>
@@ -172,7 +172,7 @@
             <p> Dartmouth Unmasked is a mobile application that allows Dartmouth students to annonymously
               discuss mental health and other personal issues.</p>
             <a class="project-link" href="./pages/unmasked.html">
-              <p>See the process</p>
+              <p>Learn more</p>
             </a>
           </div>
           <div class="project-photo">
