--- a/pages/lor.html
+++ b/pages/lor.html
@@ -19,7 +19,9 @@
   <!-- Header -->
   <div class="page-header">
 
-    <a class="page-back" href="../index.html"> <i class="fa fa-arrow-left" aria-hidden="true"></i> &nbsp; Back to home </a>
+    <div class="page-back-container">
+      <a class="page-back" href="../index.html"> <i class="fa fa-arrow-left" aria-hidden="true"></i> &nbsp; Back to home </a>
+    </div>
     <div class="page-header-content">
       <h1 class="page-title">LEFT ON READ</h1>
       <h2 class="page-role"> Lead Designer | Front-End Developer</h2>
@@ -134,6 +136,44 @@
       wants in mind.
     </p>
 
+    <div class="carousel-wrapper">
+
+      <div id="unmasked-personas-carousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#unmasked-personas-carousel" data-slide-to="0" class="active"></li>
+          <li data-target="#unmasked-personas-carousel" data-slide-to="1"></li>
+          <li data-target="#unmasked-personas-carousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="persona-item item active">
+            <img class="carousel-img" src="../img/lor/karen.png" alt="john">
+          </div>
+
+          <div class="persona-item item">
+            <img class="carousel-img" src="../img/lor/jake.png" alt="analytics">
+          </div>
+
+          <div class="persona-item item">
+            <img class="carousel-img" src="../img/lor/janice.png" alt="graphs">
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#unmasked-personas-carousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#unmasked-personas-carousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
+    </div>
+
 
     <div class="title-wrapper">
       <h1 class="section-title">Ideate</h1>
@@ -149,6 +189,14 @@
       as straightforward as possible. In terms of the user interface, we also believed a minimalistic,
       modern design would help build our website's credibility. With the minimalist design and a straightforward
       user flow, we aimed to create a clean user experience that flowed with each step of the experience.</p>
+
+    <div class="images-gallery">
+
+      <img class="gallery-img" src="../img/lor/sketch1.PNG" alt="main">
+      <img class="gallery-img" id="gallery-portrait-img" src="../img/lor/sketch3.PNG" alt="main">
+      <img class="gallery-img" src="../img/lor/sketch2.PNG" alt="main">
+
+    </div>
 
     <p class="page-normal-text"> For example, initial mockups included a navigation bar at the top of each page. However, we eventually
       decided to remove it because it cluttered our design and offered little benefit, giving that our
