--- a/pages/lor.html
+++ b/pages/lor.html
@@ -37,44 +37,19 @@
     </div>
   </div>
 
-  <div class="carousel-wrapper">
 
-    <div id="main-carousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
-        <li data-target="#main-carousel" data-slide-to="1"></li>
-        <li data-target="#main-carousel" data-slide-to="2"></li>
-      </ol>
 
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner">
-        <div class="main-item item active">
-          <img class="carousel-img" src="../img/lor/main-screen.PNG" alt="main">
-        </div>
-
-        <div class="main-item item">
-          <img class="carousel-img" src="../img/lor/get-analytics.PNG" alt="analytics">
-        </div>
-
-        <div class="main-item item">
-          <img class="carousel-img" src="../img/lor/graphs.PNG" alt="graphs">
-        </div>
-      </div>
-
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#main-carousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#main-carousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
-      </a>
+  <!-- Wrapper for slides -->
+  <div class="images-collage">
+    <div class="macbook-item">
+      <img class="carousel-img" src="../img/lor/main-macbook.PNG" alt="main">
     </div>
 
   </div>
+
   </div>
+
+
 
   <div class="page-body">
     <!-- Problem -->
