--- a/pages/lor.html
+++ b/pages/lor.html
@@ -42,7 +42,7 @@
   <!-- Wrapper for slides -->
   <div class="images-collage">
     <div class="macbook-item">
-      <img class="carousel-img" src="../img/lor/main-macbook.PNG" alt="main">
+      <img class="carousel-img" src="../img/lor/main-macbook.png" alt="main">
     </div>
 
   </div>
